# cpp-ttnn-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  init_repo.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: dependencies.cmake  helper_functions.cmake
sources/: CMakeLists.txt
sources/examples/: CMakeLists.txt
sources/examples/sample_app/: CMakeLists.txt  main.cpp
sources/sample_lib/: CMakeLists.txt
sources/sample_lib/sample/: sample_class.cpp  sample_class.hpp
tests/: CMakeLists.txt  hello_test.cpp
